# pyuci

./: .Dockerfile  .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  pyuci.c  setup.py  tox.ini
euci/: __init__.py
tests/: euci_test.py  test_euci.py  test_uci.py  uci_test.py
